--- a/style.css
+++ b/style.css
@@ -1,40 +1,38 @@
-.child-box{
-    border-color: black;
-    border-style:  solid;
-    border-width: 1px;
-    border: black solid 1px; /* shorthand */
+.child-box {
+    /* border-color: #000;
+    border-style: solid;
+    border-width: 1px; */
+    border: #000000 solid 1px; /* shorthand */
     width: 100px;
     height: 100px;
     text-align: center;
-}
-
-
-
-.parent-box div:nth-child(2){
-    background-color: rgb(76, 0, 255);
-
-}
-
-.parent-box div:nth-child(3){
-    background-color: rgb(0, 255, 21);
-
-    
-
-}
-
-.parent-box div:nth-child(4){
-    background-color: rgb(251, 255, 0);
-
-}
-.parent-box{
+  }
+  
+  .parent-box div:nth-child(2) {
+    background-color: aquamarine;
+  } /* Usar nth-of-type */
+  
+  .parent-box div:nth-child(3) {
+    background-color: aqua;
+  }
+  
+  .parent-box div:nth-child(4) {
+    background-color: lawngreen;
+  }
+  
+  .parent-box {
     display: flex;
-    background-color: darkkhaki;
-    padding: 40px 20px 20px 20px; /*shorthand para: padding-top, padding-right, padding-bottom, padding-left*/
-
-}
-
-.parent-box > p {
-    position: absolute; 
+    background-color: #ffdfb7;
+    padding: 40px 20px 20px 20px; /* shorthand para: padding-top, padding-right, padding-bottom, padding-left */
+  }
+  
+  .parent-box > p {
+    position: absolute;
     margin-top: -30px;
-
-}
+    left: 25px;
+  }
+  
+  #justify-content .parent-box {
+    justify-content: center;
+  }
+  
