--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
     width: 100px;
     height: 100px;
     text-align: center;
+    border-radius: 15px;
   }
   
   .parent-box div:nth-child(2) {
@@ -26,7 +27,7 @@
     padding: 40px 20px 20px 20px; /* shorthand para: padding-top, padding-right, padding-bottom, padding-left */
   }
   
-  .parent-box > p {
+  .parent-box > p{
     position: absolute;
     margin-top: -30px;
     left: 25px;
