--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
+
+body{
+    font-family: 'Bebas Neue', sans-serif;
+}
+
+
 .child-box {
     /* border-color: #000;
     border-style: solid;
@@ -37,3 +45,10 @@
     justify-content: center;
   }
   
+  #jc-space-around .parent-box{
+    justify-content: space-around;
+  }
+
+  #jc-space-between .parent-box{
+    justify-content: space-between;
+  }
